package edu.utdallas.cs3354.team15.foundation;
/** 
 *  The Suit enumeration
 *  Intended to pragmatically represent the Card's suit.
 * 
 *  @author        Ben Brothers
 *  @version       %I%, %G%
*/
public enum Suit {
    Spades,
    Clubs,
    Diamonds,
    Hearts
}
